--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="setting_username">Username</string>
     <string name="setting_password">Password</string>
     <string name="loading">loading</string>
+    <string name="top_activity">Top</string>
 
 </resources>
