authentification transmission server with service + refacto + working on displaying categories on the main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Download-TPB</string>
+    <string name="app_name">Piratebay downloader</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search torrents</string>
     <string name="activity_searchable">SearchableActivity</string>
